[gd_scene load_steps=5 format=3 uid="uid://gkv1lf5rx5go"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_lsdqd"]
[ext_resource type="SpriteFrames" uid="uid://c1dnw8agr60db" path="res://Data/Sprite_Player_Beige.tres" id="2_jj3w0"]
[ext_resource type="Script" path="res://Scripts/PlayerMessageItemContainer.gd" id="3_wlt1o"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ixhel"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("PlayerAnimSprite:animation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("PlayerAnimSprite:frame")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("PlayerAnimSprite:flip_h")
properties/3/spawn = true
properties/3/replication_mode = 1

[node name="Player" type="Node2D"]
script = ExtResource("1_lsdqd")

[node name="PlayerAnimSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_jj3w0")
animation = &"Idle"

[node name="NameTag" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -50.0
offset_right = 20.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
text = "이름"
horizontal_alignment = 1

[node name="MessageContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -55.0
offset_bottom = -55.0
script = ExtResource("3_wlt1o")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ixhel")
